--- a/css/theme/beige.css
+++ b/css/theme/beige.css
@@ -4,7 +4,6 @@
  * Copyright (C) 2011-2012 Hakim El Hattab, http://hakim.se
  */
 @import url(../../lib/font/league-gothic/league-gothic.css);
-@import url('https://fonts.googleapis.com/css?family=Montserrat|Raleway');
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
 /*********************************************
  * GLOBAL STYLES
@@ -20,7 +19,7 @@ body {
   background-color: #f7f3de; }
 
 .reveal {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 40px;
   font-weight: normal;
   color: #333; }
@@ -51,13 +50,13 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #333;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "League Gothic", Impact, sans-serif;
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
+  text-transform: uppercase;
   text-shadow: none;
   word-wrap: break-word; }
-
 
 .reveal h1 {
   font-size: 3.77em; }
